-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.4.0, 6.4.1, 6.5
-
None
-
-
4673f0027 (dev)
qClipboardPasteTo:
Line 87: QMimeData *mMimeData = new QMimeData;
Line 137 and line 143: qWasmClipboardPaste(mMimeData);
If anyone calls QPlatformClipboard::setMimeData between these calls (when file hasn't streamed yet in the file handling loop), the mMimeData will have been deleted before the second access.
- blocks
-
QTBUG-108842 Crash on pasting a text file to text edit
-
- Closed
-
- is cloned by
-
QTBUG-108842 Crash on pasting a text file to text edit
-
- Closed
-